--- a/client/views/index.html
+++ b/client/views/index.html
@@ -1,24 +1,42 @@
-<div id="nav-top">
-	<div class="container">
-		<nav class="navbar navbar-left">
-			<ul class="nav navbar-nav">
-				<li>INTERNET</li>
-				<li>MOBILE</li>
-			</ul>
-		</nav>
-		<nav class="navbar-right"></nav>
+<!-- Header -->
+<header>
+	<div id="nav-top">
+		<div class="container">
+			<nav class="navbar navbar-left">
+				<ul class="navbar-nav">
+					<li class="active">
+						<a href="">MOBILE
+						<span class="indicator"></span>
+						</a>
+					</li>
+					<li><a href="">INTERNET</a></li>
+				</ul>
+			</nav>
+			<nav class="navbar navbar-right">
+				<ul class="navbar-nav">
+					<li><a href="">BLOG</a></li>
+					<li><a href="">ABOUT</a></li>
+					<li><a href="">1-888-538-9295</a></li>
+					<li><a href="">HELP</a></li>
+					<li><a href="">FOLLOW (111,000+)</a></li>
+					<li><a href="">SIGN UP / SIGN IN</a></li>
+				</ul>
+			</nav>
+		</div>
 	</div>
-</div>
-<div id="nav-bottom">
-	<div class="container">
-		<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-			<span class="sr-only">Toggle navigation</span>
-	        <span class="icon-bar"></span>
-	        <span class="icon-bar"></span>
-	        <span class="icon-bar"></span>
-		</button>
+	<div id="nav-bottom">
+		<div class="container">
+			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+				<span class="sr-only">Toggle navigation</span>
+		        <span class="icon-bar"></span>
+		        <span class="icon-bar"></span>
+		        <span class="icon-bar"></span>
+			</button>
+		</div>
 	</div>
-</div>
+</header>
+
+<!-- Body -->
 <div id="background">
 	<div id="content" class="container well" >
 		<h1>Welcome</h1>
@@ -42,3 +60,5 @@
 		</table>
 	</div>
 </div>
+
+<!-- Footer -->
